@@ -29,7 +29,7 @@ ok(!$pubkey, "public key should not exist");
 
 SKIP:
 {
-	skip "these errors vary depending on where you are", 2
+	skip "these tests fail when run on the other side of my firewall", 2
 		unless ($ENV{DNS_TESTS} && $ENV{DNS_TESTS} > 1);
 
 $pubkey = eval { Mail::DKIM::PublicKey->fetch(
